# Procedural-Content-Generator

./: .gitignore  CMakeLists.txt  KGVEngine.sln  README.md  vcpkg.json
KGVEngine/: Application.cpp  ApplicationWin32.cpp  ApplicationWin32.h  BufferConfigDX11.cpp  BufferDX11.cpp  BufferDX11.h  Camera.cpp  Camera.h  ConstantBufferDX11.cpp  ConstantBufferDX11.h  DepthStencilStateDX11.cpp  DepthStencilStateDX11.h  DepthStencilViewConfigDX11.cpp  DepthStencilViewDX11.h  Entity.cpp  Entity.h  Error.h  GeometryFactory.cpp  GeometryFactory.h  IPipelineStageDX11.h  IScene.cpp  IScene.h  IShaderManager.cpp  IShaderManager.h  IWndProc.h  IndexBufferDX11.h  InputAssemblerStage.cpp  InputAssemblerStage.h  InputAssemblerStageDX11.cpp  InputAssemblerStageDX11.h  InputAssemblerState.cpp  InputAssemblerState.h  InputAssemblerStateDX11.cpp  InputAssemblerStateDX11.h  LightComponent.cpp  LightComponent.h  MaterialComponent.h  Mesh.cpp  Mesh.h  MeshComponent.h  (+75 more)
KGVEngine/Scenes/: HeightMapScene.cpp  HeightMapScene.h  IScene.cpp  IScene.h  TerrainScene.cpp  TerrainScene.h  WaveformScene.cpp  WaveformScene.h
KGVEngine/engine/: Camera.cpp  Camera.h  Entity.h  IShaderManager.h
KGVEngine/engine/entitycomponents/: LightComponent.h  MaterialComponent.cpp  MeshComponent.cpp  MeshComponent.h  TransformComponent.cpp
KGVEngine/procedural/: MultithreadedNoiseExecutor.cpp  PerlinNoise.cpp  PerlinNoise.h
KGVEngine/render/: BufferConfigDX11.h  BufferDX11.h  DepthStencilViewConfigDX11.h  DepthStencilViewDX11.cpp  IndexBufferDX11.h  InputAssemblerStageDX11.cpp  RenderDeviceDX11.cpp  RenderDeviceDX11.h
KGVEngine/render/pipeline/: InputAssemblerStageDX11.cpp  InputAssemblerStateDX11.cpp  InputAssemblerStateDX11.h  OutputMergerStageDX11.cpp  OutputMergerStageDX11.h  PipelineManagerDX11.cpp  PipelineManagerDX11.h  PixelShaderStageDX11.cpp  RasterizerStageDX11.cpp  RasterizerStageDX11.h  RasterizerStageStateDX11.cpp  ShaderStageStateDX11.cpp
KGVEngine/render/resources/: ResourceDX11.h  ResourceData.h  ResourceViewDX11.cpp  ResourceViewDX11.h
KGVEngine/render/shader/: PixelShaderDX11.h  ShaderDX11.cpp  ShaderManager.cpp  ShaderManager.h  VertexShaderStageDX11.cpp  VertexShaderStageDX11.h
KGVEngine/shaders/: basicLighting.hlsl  basicPixel.hlsl  basicVertex.hlsl  heightmapTerrain.hlsl  texturePlane.hlsl
KGVEngine/utility/: Error.h  GeometryFactory.cpp  GeometryFactory.h
KVGEngine/: Application.h  ApplicationWin32.cpp  ApplicationWin32.h  BufferConfigDX11.cpp  BufferConfigDX11.h  BufferDX11.cpp  BufferDX11.h  Error.h  IRenderContextDX11.h  IWndProc.h  IndexBufferDX11.cpp  IndexBufferDX11.h  KVGEngine.vcxproj  KVGEngine.vcxproj.filters  Log.cpp  Log.h  Platform.h  RenderDeviceDX11.cpp  RenderDeviceDX11.h  RenderTargetViewConfigDX11.cpp  RenderTargetViewConfigDX11.h  RenderTargetViewDX11.cpp  RenderTargetViewDX11.h  Resource.h  ResourceDX11.cpp  ResourceData.h  ResourceViewDX11.cpp  ResourceViewDX11.h  ShaderResourceViewConfigDX11.cpp  ShaderResourceViewConfigDX11.h  ShaderResourceViewDX11.h  StringUtil.cpp  StringUtil.h  SwapChainConfigDX11.cpp  SwapChainConfigDX11.h  SwapchainConfigDX11.h  Texture2dConfigDX11.cpp  Texture2dConfigDX11.h  Texture2dDX11.cpp  Texture2dDX11.h  (+10 more)
Source/: KGVEngine.vcxproj  KGVEngine.vcxproj.filters
assets/textures/: snow_m_DISP.tga  snow_m_OCC.tga  snow_m_SPEC.tga
docs/html/: _buffer_d_x11_8h_source.html  _error_8h_source.html  _i_render_context_d_x11_8h_source.html  _index_buffer_d_x11_8h_source.html  _log_8h_source.html  _platform_8h_source.html  _render_device_d_x11_8h_source.html  _texture2d_d_x11_8h_source.html  _types_8h_source.html  _vertex_buffer_d_x11_8h_source.html  _window_8h_source.html  annotated.html  annotated_dup.js  class_k_g_v_1_1_render_1_1_buffer_d_x11-members.html  class_k_g_v_1_1_render_1_1_buffer_d_x11.html  class_k_g_v_1_1_render_1_1_index_buffer_d_x11-members.html  class_k_g_v_1_1_render_1_1_index_buffer_d_x11.html  class_k_g_v_1_1_render_1_1_render_device_d_x11.html  class_k_g_v_1_1_render_1_1_texture2d_d_x11-members.html  class_k_g_v_1_1_render_1_1_texture2d_d_x11.html  class_k_g_v_1_1_render_1_1_vertex_buffer_d_x11-members.html  class_k_g_v_1_1_render_1_1_vertex_buffer_d_x11.html  class_k_g_v_1_1_system_1_1_window-members.html  class_k_g_v_1_1_system_1_1_window.html  class_k_g_v_1_1_util_1_1_log-members.html  class_k_g_v_1_1_util_1_1_log.html  class_k_g_v_1_1_util_1_1_log.js  classes.html  dir_000dc9f5a68b6962de1c8c5369e8be13.html  dir_000dc9f5a68b6962de1c8c5369e8be13.js  dir_43d2e16f72376383599acf32af5b5ca9.html  dir_43d2e16f72376383599acf32af5b5ca9.js  dir_b3cd31459d407d5e251e9bb51d981164.html  dir_b3cd31459d407d5e251e9bb51d981164.js  dir_bde6b49d8f2d528575126cd594026d6e.html  dir_bde6b49d8f2d528575126cd594026d6e.js  dir_c8bf60e2e8b02def54f1bdb7dcc6df36.html  dir_c8bf60e2e8b02def54f1bdb7dcc6df36.js  dir_d522931ffa1371640980b621734a4381.html  dir_d522931ffa1371640980b621734a4381.js  (+9 more)
docs/html/search/: all_1.js  (+12 more)
docs/latex/: _buffer_d_x11_8h_source.tex  _error_8h_source.tex  _i_render_context_d_x11_8h_source.tex  _index_buffer_d_x11_8h_source.tex  _log_8h_source.tex  _platform_8h_source.tex  _render_device_d_x11_8h_source.tex  _texture2d_d_x11_8h_source.tex  _types_8h_source.tex  _vertex_buffer_d_x11_8h_source.tex  _window_8h_source.tex  annotated.tex  class_k_g_v_1_1_render_1_1_buffer_d_x11.eps  class_k_g_v_1_1_render_1_1_buffer_d_x11.tex  class_k_g_v_1_1_render_1_1_index_buffer_d_x11.eps  class_k_g_v_1_1_render_1_1_index_buffer_d_x11.tex  class_k_g_v_1_1_render_1_1_render_device_d_x11.tex  class_k_g_v_1_1_render_1_1_texture2d_d_x11.tex  class_k_g_v_1_1_render_1_1_vertex_buffer_d_x11.eps  class_k_g_v_1_1_render_1_1_vertex_buffer_d_x11.tex  class_k_g_v_1_1_system_1_1_window.tex  class_k_g_v_1_1_util_1_1_log.tex  files.tex  hierarchy.tex  pch_8h_source.tex  refman.tex
shaders/: basicLighting.hlsl  basicLightingPixelShader.hlsl  basicTransformVertexShader.hlsl  displacementLineVertexShader.hlsl  displacementVertexShader.hlsl  gradientPixelShader.hlsl  heightmapTerrain.hlsl  texturePlane.hlsl  unlitLineShader.hlsl  unlitTexturedPixelShader.hlsl
(+27 files in other folders)
